2004-10-14  Carl Hetherington <inkscape@carlh.net>

	* src/Path.cpp, src/Path.h, src/PathConversion.cpp,
	src/PathCutting.cpp, src/PathOutline.cpp, src/PathSimplify.cpp,
	src/ShapeMisc.cpp: use a vector of pointers for Path::descr_cmd.

	* src/livarot/Ligne.cpp, src/livarot/Ligne.h,
	src/livarot/int-line.cpp, src/livarot/int-line.h,
	src/livarot/float-line.cpp, src/livarot/float-line.h,
	src/livarot/livarot-forward.h, src/livarot/ShapeRaster.cpp,
	src/sp-flowregion.cpp, src/display/canvas-bpath.cpp,
	src/display/nr-arena-glyphs.cpp, src/display/nr-arena-shape.cpp,
	src/display/sp-ctrlline.cpp, src/libnrtype/FlowDest.cpp,
	src/libnrtype/RasterFont.cpp: split Ligne into float-line and
	int-line.

	* src/libnrtype/FlowDest.cpp, src/libnrtype/RasterFont.cpp,
	src/libnrtype/raster-position.h, src/livarot/float-line.cpp,
	src/livarot/float-line.h, src/livarot/int-line.cpp: use
	std::vector for arrays in FloatLigne.

2004-10-12  MenTaLguY  <mental@rydia.net>

	* src/Makefile.am: added files

	* src/layer-fns.cpp, src/sp-item.cpp: use iterators, simplifying code

	* src/sp-object.cpp, src/splivarot.cpp: adapt to new version of 
	  Inkscape::Algorithms::longest_common_suffix

	* src/sp-object.h, src/sp-repr-iterators.h: add new iterator classes

	* src/algorithms/find-last-if.h: add counterpart of std::find_if

	* src/algorithms/longest-common-suffix.h: rewrite to use iterators

	* src/algorithms/longest-prefix.h, src/algorithms/longest-suffix.h,
	  src/algorithms/shortest-prefix.h, src/algorithms/shortest-suffix.h:

	  removed; these algorithms are no longer necessary when using
	  iterators

	* src/traits/list.h: no longer needed

	* src/traits/reference.h: add "Pointer" member type

	* src/util/Makefile_insert: shuffled files

	* src/util/list.h: reworked Inkscape::Util::List to be a "handle" type
	  that can also be used as an STL iterator

	* src/util/forward-pointer-iterator.h: treat a pointer as an iterator,